#5890 bug: fixes spacing + z-index issues in search pane

--- a/src/components/SearchPane/_search-pane.scss
+++ b/src/components/SearchPane/_search-pane.scss
@@ -21,7 +21,7 @@ $transition-duration: 0.4s;
   top: 0;
   transform: translate3d(100%, 0, 0);
   transition: transform ease $transition-duration;
-  z-index: var(--z-medium);
+  z-index: var(--z-high);
 
   @include mq(md) {
     bottom: initial;
@@ -45,16 +45,11 @@ $transition-duration: 0.4s;
   display: flex;
   height: 100%;
   justify-content: stretch;
-  padding: var(--space-lg);
+  padding: calc(var(--space-unit) * 4);
   position: relative;
   transition: transform ease $transition-duration;
   width: 100%;
   z-index: var(--z-low);
-
-  @include mq(sm) {
-    padding-left: var(--space-xl);
-    padding-right: var(--space-xl);
-  }
 
   @include mq(md) {
     min-height: 64px;
@@ -93,6 +88,8 @@ $transition-duration: 0.4s;
   @extend %btn-nav-base;
   border-top: 1px solid var(--colour-concrete-05);
   color: var(--colour-blue-80);
+  padding-left: calc(4 * var(--space-unit));
+  padding-right: calc(4 * var(--space-unit));
   width: 100%;
 
   @include mq(md) {
@@ -110,6 +107,8 @@ $transition-duration: 0.4s;
 .search-pane__btn-close {
   @extend %btn-nav-base;
   color: var(--colour-concrete-60);
+  padding-left: calc(4 * var(--space-unit));
+  padding-right: calc(4 * var(--space-unit));
 }
 
 .search-pane__btn-close .icon {
